--- a/data/stories.yml
+++ b/data/stories.yml
@@ -2,6 +2,11 @@ version: "3.1"
 
 stories:
 
+- story: ask llm query
+  steps:
+    - intent: ask_question
+    - action: action_query_llm
+
 - story: greet user
   steps:
     - intent: greet
