--- a/endpoints.yml
+++ b/endpoints.yml
@@ -41,6 +41,9 @@
 #  password: password
 #  queue: queue
 
+rasa_server:
+  url: "http://localhost:5005"
+
 action_endpoint:
   url: "http://localhost:5055/webhook"
 
