--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   rasa:
     image: rasa/rasa:3.6.21
@@ -26,7 +24,7 @@ services:
     build:
       context: ./llm_service
       dockerfile: Dockerfile
-    image: satvik1945/llm_service:latest # Make sure this matches your Docker Hub username
+    image: satvik1945/llm_service:latest
     container_name: llm_service
     ports:
       - "8000:8000"
@@ -61,6 +59,17 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+
+  messenger:
+    build: ./messenger_service
+    container_name: messenger_service
+    ports:
+      - "5007:5007"
+    env_file:
+      - ./messenger_service/.env
+    depends_on:
+      - rasa
+    command: flask run --host=0.0.0.0 --port=5007
 
 volumes:
   mongo_data:
