--- a/Dockerfile.actions
+++ b/Dockerfile.actions
@@ -1,10 +1,12 @@
-# Use the official Rasa SDK image
 FROM rasa/rasa-sdk:3.7.0
 
 WORKDIR /app
 
-# Copy actions folder into container
 COPY actions /app/actions
+
+USER root
+RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+
 
 # Install extra Python packages for actions
 COPY requirements-actions.txt /app/
