--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -7,7 +7,6 @@ nlu:
     - hey there
     - namaste
     - good morning
-    - good evening
 - intent: goodbye
   examples: |
     - bye
@@ -21,7 +20,6 @@ nlu:
     - haan
     - of course
     - definitely
-    - sure
 - intent: deny
   examples: |
     - no
@@ -45,21 +43,28 @@ nlu:
     - I want to buy article [SK1009](article_id)
     - Book [FZ9981](article_id)
     - Confirm order for [TX904](article_id)
-    - Please order [AR105](article_id) for me
 - intent: ask_payment
   examples: |
     - How do I pay?
     - Send me QR
     - Give me your UPI
     - How to send the money?
-- intent: ask_question
-  examples: |
-    - What is the delivery time?
-    - Do you have cash on delivery?
-    - Can I return it?
-    - What if the size doesn't fit?
 - intent: inform
   examples: |
     - My number is [8765432109](phone_number)
     - Send to [MG Road, Pune](address)
     - [TX0101](article_id)
+
+- intent: ask_llm # Consolidated intent for all questions
+  examples: |
+    # Examples from old ask_question intent
+    - What is the delivery time?
+    - Do you have cash on delivery?
+    - Can I return it?
+    - What if the size doesn't fit?
+    # Examples from old ask_llm intent
+    - is this material good for summer?
+    - how should I wash this dress
+    - what is your return policy
+    - will this suit a tall person
+    - do you have anything similar in silk
