--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,42 +1,42 @@
 version: "3.1"
 
 stories:
-
-- story: ask llm query
-  steps:
-    - intent: ask_question
-    - action: action_query_llm
-
-- story: greet user
+- story: happy path greet
   steps:
     - intent: greet
     - action: utter_greet
 
-- story: create customer profile
+- story: change address when not provided initially
   steps:
-    - intent: create_profile
-    - action: action_save_profile
-    - action: utter_profile_saved
-
-- story: change address flow
-  steps:
-    - intent: change_address
-    - action: action_change_address
+    - intent: change_address  # User says "I want to change my address"
+    - action: utter_ask_address # Bot asks for the new address
+    - intent: inform
+      entities:
+        - address: "123 New Street, Mumbai" # User provides the address
+    - action: actions_change_address # Action runs to update the address in the DB
     - action: utter_address_updated
 
-- story: confirm article purchase
+- story: confirm purchase when article ID is missing
   steps:
-    - intent: confirm_purchase
+    - intent: confirm_purchase # User says "I want to buy this"
+    - action: utter_ask_article_id # Bot asks for the ID
+    - intent: inform
+      entities:
+        - article_id: "SKU-5544" # User provides the article ID
     - action: action_confirm_purchase
     - action: utter_purchase_confirmed
 
-- story: ask for payment
+- story: complete purchase and payment flow
   steps:
+    - intent: confirm_purchase
+      entities:
+        - article_id: "XYZ-123" # User provides ID from the start
+    - action: action_confirm_purchase
+    - action: utter_purchase_confirmed
     - intent: ask_payment
     - action: action_send_payment_info
-    - action: utter_send_payment_info
 
-- story: ask general question
+- story: user says goodbye
   steps:
-    - intent: ask_question
-    - action: action_answer_query
+  - intent: goodbye
+  - action: utter_goodbye
